<resources>
    <string name="app_name">Delivery1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="manager_view">Manager View</string>
    <string name="about_us_text">Group Memebers :</string>
    <string name="about_us_name">Haoyu Wang | Bin Ye | Minyong Li</string>
    <string name="title_activity_login">Delivery</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="card_delivery_from_title">From</string>
    <string name="card_delivery_to_title">To</string>
    <string name="card_delivery_status_title">Status:</string>
    <string name="add_new_data">Add New Data</string>
    <string-array name="role">
        <item>Driver</item>
        <item>Manager</item>
        <item>Vendors</item>
        <item>Building Sites</item>
    </string-array>
    <string-array name="delivery_status">
        <item>Pending</item>
        <item>Ready</item>
        <item>Delivering</item>
        <item>Delivered</item>
        <item>Cancelled</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="card_delivery_id_title">ID</string>
    <string name="card_delivery_driver_title">Driver:</string>
    <string name="card_site_info_ndeliveries_title">Package(s) delivering</string>
</resources>