<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16sp"
    android:layout_marginVertical="8sp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16sp">

        <TextView
            android:id="@+id/delivery_id_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_delivery_id_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/delivery_id_text_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/delivery_id_title"
            app:layout_constraintStart_toEndOf="@+id/delivery_id_title" />

        <TextView
            android:id="@+id/delivery_status_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/card_delivery_status_title"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/delivery_status_text_list"
            app:layout_constraintEnd_toStartOf="@+id/delivery_status_text_list" />

        <TextView
            android:id="@+id/delivery_status_text_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/delivery_from_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/card_delivery_from_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/delivery_id_title"
            app:layout_constraintTop_toBottomOf="@+id/delivery_id_title" />

        <TextView
            android:id="@+id/delivery_from__text_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="21sp"
            app:layout_constraintStart_toStartOf="@+id/delivery_from_title"
            app:layout_constraintTop_toBottomOf="@+id/delivery_from_title" />

        <TextView
            android:id="@+id/delivery_to_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/card_delivery_to_title"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/delivery_status_text_list"
            app:layout_constraintTop_toBottomOf="@+id/delivery_status_text_list" />

        <TextView
            android:id="@+id/delivery_to__text_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="21sp"
            app:layout_constraintEnd_toEndOf="@+id/delivery_to_title"
            app:layout_constraintTop_toBottomOf="@+id/delivery_to_title" />

        <TextView
            android:id="@+id/delivery_driver_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/card_delivery_driver_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/delivery_id_title"
            app:layout_constraintTop_toBottomOf="@+id/delivery_from__text_list" />

        <TextView
            android:id="@+id/delivery_driver_text_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="TextView"
            app:layout_constraintBottom_toBottomOf="@+id/delivery_driver_title"
            app:layout_constraintStart_toEndOf="@+id/delivery_driver_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>